Crash in [@ mozilla::dom::indexedDB::`anonymous namespace'::Cursor::SendResponseInternal]
Categories
(Core :: Storage: IndexedDB, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox70 | --- | unaffected |
| firefox71 | --- | unaffected |
| firefox72 | --- | fixed |
People
(Reporter: philipp, Assigned: sg)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file, 1 obsolete file)
This bug is for crash report bp-625d1754-e3e5-4a1f-8f94-787a30191115.
Top 10 frames of crashing thread:
0 xul.dll void mozilla::dom::indexedDB::`anonymous namespace'::Cursor::SendResponseInternal dom/indexedDB/ActorsParent.cpp:15311
1 xul.dll bool mozilla::dom::indexedDB::`anonymous namespace'::Cursor::CursorOpBase::SendFailureResult dom/indexedDB/ActorsParent.cpp:25741
2 xul.dll void mozilla::dom::indexedDB::`anonymous namespace'::TransactionDatabaseOperationBase::SendPreprocessInfoOrResults dom/indexedDB/ActorsParent.cpp:22177
3 xul.dll nsresult mozilla::dom::indexedDB::`anonymous namespace'::TransactionDatabaseOperationBase::Run dom/indexedDB/ActorsParent.cpp
4 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1250
5 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:486
6 xul.dll mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:333
7 xul.dll void MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:308
8 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:290
9 xul.dll static void nsThread::ThreadFunc xpcom/threads/nsThread.cpp:458
this browser crash signature is showing up recently since 72.0a1 build 20191114214957 - likely regressed by the changes from bug 1168606.
the crashes are happening with the optimisitic MOZ_CRASH("Should never get here!"); from bug 994190.
(so far, all crashes got reported from win10 machines with nvidia gpus - i'm not sure yet if this a coincidence at this point)
I'm experiencing this bug. Win10x64 with an Nvidia GPU, guaranteed crash on startup. Let me know if I can help.
| Assignee | ||
Updated•6 years ago
|
| Reporter | ||
Updated•6 years ago
|
| Assignee | ||
Comment 3•6 years ago
|
||
Comment 5•6 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 6•6 years ago
|
||
| Assignee | ||
Comment 7•6 years ago
|
||
After the fix, no new crash reports have been submitted so far.
mitchell, can you confirm your startup works again with the new Nightly?
Yes, no crashes since the fix was landed. Thanks for fixing and for checking up :)
I'm not too familiar with etiquette in these situations, should I have chimed in as soon as I tried the fix?
Updated•6 years ago
|
| Assignee | ||
Comment 9•6 years ago
|
||
Great, thanks!
I am not sure what is customary either :) Personally, I think it might help if you report back if you tried it. It might be that the crash disappeared but some other problem turned up instead, and we would have no way of knowing.
Updated•6 years ago
|
Updated•6 years ago
|
Comment 10•6 years ago
|
||
Hi Simon, is qa needed here? And if so, could you provide us with some steps? Thanks!
| Assignee | ||
Comment 11•6 years ago
|
||
(In reply to Catalin Sasca, QA [:csasca] from comment #10)
Hi Simon, is qa needed here? And if so, could you provide us with some steps? Thanks!
Unfortunately, I can't provide any steps to reproduce the issue. We are considering adding more automated unit tests for the parent process code in isolation to better catch such things in the future.
Updated•4 years ago
|
Description
•