Bug 1597038 - Fix crash in Cursor::SendResponseInternal with nsresult response type and non-empty files. r=dom-workers-and-storage-reviewers,ttung

Differential Revision: https://phabricator.services.mozilla.com/D53393